--- a/state_notifier_example/.gitignore
+++ b/state_notifier_example/.gitignore
@@ -54,6 +54,10 @@ linked_*.ds
 unlinked.ds
 unlinked_spec.ds
 
+# freezed
+*.freezed.dart
+*.g.dart
+
 # Android related
 **/android/**/gradle-wrapper.jar
 **/android/.gradle
